@@ -18,7 +18,6 @@ lib/Module/Build/Compat.pm
 lib/Module/Build/Config.pm
 lib/Module/Build/Cookbook.pm
 lib/Module/Build/Dumper.pm
-lib/Module/Build/ModuleInfo.pm
 lib/Module/Build/Notes.pm
 lib/Module/Build/Platform/aix.pm
 lib/Module/Build/Platform/cygwin.pm
